Opened 10 years ago
Closed 8 years ago
#6992 closed bug (fixed)
Crash when column-sorting while type-ahead filtering
Reported by: | humdinger | Owned by: | stpere |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Tracker | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #7641 | |
Platform: | All |
Description
This is hrev39847.
- Activate type-ahead filtering in Tracker prefs
- Open a folder
- Type a letter to filter the contents
- Click on an attribute column for sorting
--> crash
Thread 2100 caused an exception: Segment violation [...] [tcsetpgrp failed in terminal_inferior: Invalid Argument] [Switching to team /boot/system/Tracker (2076) thread w>home (2100)] 0x003c46d4 in BList::CountItems () from /boot/system/lib/libbe.so (gdb) bt #0 0x003c46d4 in BList::CountItems () from /boot/system/lib/libbe.so #1 0x005430b3 in BObjectList<BPrivate::BTextWidget>::CountItems () from /boot/system/lib/libtracker.so #2 0x00540965 in BPrivate::BPose::WidgetFor () from /boot/system/lib/libtracker.so #3 0x00545117 in _ZL20PoseCompareAddWidgetPKN8BPrivate5BPoseES2_PNS_9BPoseViewE () from /boot/system/lib/libtracker.so #4 0x00563998 in std::merge<BPrivate::BPose**, BPrivate::BPose**, BPrivate::BPose**, PoseComparator> () from /boot/system/lib/libtracker.so #5 0x00563aaf in std::__merge_sort_loop<BPrivate::BPose**, BPrivate::BPose**, long, PoseComparator> () from /boot/system/lib/libtracker.so #6 0x00563b16 in std::__merge_sort_with_buffer<BPrivate::BPose**, BPrivate::BPose**, PoseComparator> () from /boot/system/lib/libtracker.so #7 0x005641e4 in std::__stable_sort_adaptive<BPrivate::BPose**, BPrivate::BPose**, long, PoseComparator> () from /boot/system/lib/libtracker.so #8 0x00555241 in BPrivate::BPoseView::SortPoses () from /boot/system/lib/libtracker.so #9 0x00580113 in BPrivate::ColumnDragState::Clicked () from /boot/system/lib/libtracker.so #10 0x0057ec06 in BPrivate::ColumnTrackState::MouseUp () from /boot/system/lib/libtracker.so #11 0x0057ec70 in BPrivate::BTitleView::MouseUp () from /boot/system/lib/libtracker.so #12 0x00374a45 in BWindow::DispatchMessage () from /boot/system/lib/libbe.so #13 0x00370cad in BWindow::task_looper () from /boot/system/lib/libbe.so #14 0x002b3cda in BLooper::_task0_ () from /boot/system/lib/libbe.so #15 0x00607ae4 in thread_entry () from /boot/system/lib/libroot.so #16 0x78247fec in ?? ()
Change History (3)
comment:1 by , 10 years ago
Blocking: | 7641 added |
---|
comment:2 by , 8 years ago
Owner: | changed from | to
---|---|
Status: | new → in-progress |
comment:3 by , 8 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
Fixed in hrev44395, thanks!
Note:
See TracTickets
for help on using tickets.
(In #7641) Duplicate of #6992.