Tracker: Sorting in filtered view led to crash

Fixes #6992.